tests/fail/record-type/duplicate-fields.pion
//~ run = "${PION} elab ${FILE}"

{x = Bool, y = Bool, x = Type, y = Type}
